@@ -58,7 +58,7 @@ public class WrapperGraph implements Graph {
                 throw new RuntimeException();
             }
             extraEdgesBySource.put(extraEdge.getBaseNode(), extraEdge);
-            extraEdgesByDestination.put(extraEdge.getAdjNode(), new VirtualEdgeIteratorState(extraEdge.getOriginalEdgeKey(), extraEdge.getEdge(), extraEdge.getEdgeKey(), extraEdge.getAdjNode(),
+            extraEdgesByDestination.put(extraEdge.getAdjNode(), new VirtualEdgeIteratorState(extraEdge.getOriginalEdgeKey(), extraEdge.getEdgeKey(), extraEdge.getAdjNode(),
                     extraEdge.getBaseNode(), extraEdge.getDistance(), extraEdge.getFlags(), extraEdge.getName(), extraEdge.fetchWayGeometry(FetchMode.ALL), true));
         }
     }
@@ -114,6 +114,7 @@ public class WrapperGraph implements Graph {
 
     @Override
     public EdgeIteratorState getEdgeIteratorStateForKey(int edgeKey) {
+        // todonow?
         throw new UnsupportedOperationException("not implemented yet");
     }
 
@@ -140,6 +141,7 @@ public class WrapperGraph implements Graph {
 
             @Override
             public int getEdgeKey() {
+                // todonow?
                 throw new UnsupportedOperationException();
             }
 
